--- a/NewportSimpleWinforms/CSharpSample.csproj
+++ b/NewportSimpleWinforms/CSharpSample.csproj
@@ -71,6 +71,7 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="NewportScpiCommands.cs" />
     <Compile Include="NewportUsbPowerMeter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
