--- a/NewportSimpleWinforms/CSharpSample.csproj
+++ b/NewportSimpleWinforms/CSharpSample.csproj
@@ -71,8 +71,6 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="NewportScpiCommands.cs" />
-    <Compile Include="NewportUsbPowerMeter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="MainForm.resx">
@@ -106,6 +104,12 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NewportUsbWrapper\NewportUsbWrapper.csproj">
+      <Project>{c378c5cc-86d6-413c-b8dd-9ca07e8aed90}</Project>
+      <Name>NewportUsbWrapper</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
