--- a/NewportSimpleWinforms/CSharpSample.csproj
+++ b/NewportSimpleWinforms/CSharpSample.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Visyn.Newport</RootNamespace>
     <AssemblyName>CSharpSample</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <UpgradeBackupLocation>
@@ -52,6 +52,9 @@
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>Visyn.Newport.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -59,9 +62,8 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="USBWrap, Version=1.4.0.20054, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>.\USBWrap.dll</HintPath>
+    <Reference Include="UsbDllWrap">
+      <HintPath>..\NewportUsbWrapper\UsbDllWrap.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
