SCPI triggering working nicely issues still exist w/ softkey & ttl triggering

--- a/NewportUsbWrapper/NewportUsbWrapper.csproj
+++ b/NewportUsbWrapper/NewportUsbWrapper.csproj
@@ -78,6 +78,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CaptureMode.cs" />
+    <Compile Include="NewportMeasurementSettings.cs" />
     <Compile Include="NewportScpi.cs" />
     <Compile Include="NewportUsbPowerMeter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
