--- a/DataStoreSample/DataStoreSample.csproj
+++ b/DataStoreSample/DataStoreSample.csproj
@@ -93,11 +93,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataStoreForm.cs">
@@ -169,6 +166,10 @@
     <ProjectReference Include="..\NewportUsbWrapper\NewportUsbWrapper.csproj">
       <Project>{c378c5cc-86d6-413c-b8dd-9ca07e8aed90}</Project>
       <Name>NewportUsbWrapper</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Visyn.Newport\Visyn.Newport.csproj">
+      <Project>{67f9d3a8-f71e-4428-913f-c37ae82cdb24}</Project>
+      <Name>Visyn.Newport</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
